--- a/src/App.css
+++ b/src/App.css
@@ -13,26 +13,36 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+
+
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: rgb(199, 199, 199);
+  text-align: center;
+  color: rgb(2, 0, 0);
+}
+
+.sidebar__{
+  position: fixed;
+  height: 100%;
+  width: 150px;
+  border-radius: 10px;
+ 
+ 
+  background-color: #d8d8d8;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
+.sidebar__text>span{
+  font-size: 20px;
+  margin-left: 20px;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  
 }
